Fixed margin on mobile devices on content boxes

--- a/public/scss/partials/content.scss
+++ b/public/scss/partials/content.scss
@@ -14,6 +14,7 @@
         margin-bottom: $length-medium;
         @media screen and (max-width: 767px){
             margin-bottom: $length-small;
+            padding-bottom: 10px;
         }
         h2 {
             text-transform: uppercase;
